# system-oled

./: Cargo.toml  README.md
src/: main.rs  tailscale.rs
src/checks/: disks.rs  interfaces.rs  mod.rs  ping.rs  system.rs  tailscale.rs  vcgencmd.rs
