[package]
name = "system-oled"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
get_if_addrs = "0.5"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
hyperlocal = "0.8"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
urlencoding = "2.1"

[target.'cfg(target_os = "linux")'.dependencies]
embedded-graphics = "0.8"
linux-embedded-hal = "0.3"
ssd1306 = "0.8"
